chore: fix project ejecution 2: ahora es personal