@@ -11,7 +11,11 @@ fork := true
 ThisBuild / javaOptions ++= Seq(
   "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
   "--add-opens=java.base/java.nio=ALL-UNNAMED",
-  "--add-exports=java.base/sun.security.action=ALL-UNNAMED"
+  "--add-exports=java.base/sun.security.action=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.io=ALL-UNNAMED"
 )
 
 libraryDependencies ++= Seq(
